Closed Bug 584235 Opened 14 years ago Closed 14 years ago

Fennec not resized correctly in portrait mode

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: naginenis, Unassigned)

References

Details

Attachments

(1 file, 1 obsolete file)

Steps to reproduce the problem: 
1. Open Fennec in portrait mode.

Actual result:
Window is wider and not able to see the close button. Also the bottom part of the window is covered by the white area.

Expected result:
Fennec should display correctly in portrait mode

We are using screenGeometry() to get the screen dimensions for resizing, and that returns always actual screen size(width and height as same as in landscape). To fix this issue, we should use visibleSceneSize() to get the visible scene size and resize based on that.
Attachment #462594 - Flags: review?(doug.turner)
Blocks: 583135
Depends on: 583179
Attachment #462594 - Attachment is obsolete: true
Attachment #462814 - Flags: review?(doug.turner)
Attachment #462594 - Flags: review?(doug.turner)
Attachment #462814 - Flags: review?(doug.turner) → review+
http://hg.mozilla.org/mozilla-central/rev/9596a5ba839c
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: