Bug 584235 - Fennec not resized correctly in portrait mode on Meego. r=dougt