widget/src/qt/nsScreenQt.cpp
@@ -43,7 +43,13 @@
 #include <qdesktopwidget.h>
 #include <qapplication.h>
 
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+#include <MApplication>
+#include <MApplicationWindow>
+#endif
+
 #include "nsScreenQt.h"
+#include "nsXULAppAPI.h"
 
 nsScreenQt::nsScreenQt(int aScreen)
     : mScreen(aScreen)
@@ -65,7 +71,18 @@ NS_IMETHODIMP
 nsScreenQt::GetRect(PRInt32 *outLeft,PRInt32 *outTop,
                     PRInt32 *outWidth,PRInt32 *outHeight)
 {
-    QRect r = QApplication::desktop()->screenGeometry(mScreen);
+    QRect r;
+#ifdef MOZ_ENABLE_MEEGOTOUCH
+    if (XRE_GetProcessType() == GeckoProcessType_Default) {
+        MWindow *window = MApplication::activeWindow();
+        if (window) {
+            QSize aSceneSize = window->visibleSceneSize();
+            r = QRect(QPoint(), aSceneSize);
+        }
+    } else
+#endif
+    r = QApplication::desktop()->screenGeometry(mScreen);
+
     *outTop = r.x();
     *outLeft = r.y();
     *outWidth = r.width();
